fixed content overflow bug

--- a/client/src/components/ChannelDisplay/ChannelDisplay.css
+++ b/client/src/components/ChannelDisplay/ChannelDisplay.css
@@ -28,7 +28,7 @@
 }
 
 .placeholder-space {
-    height: calc(100vh - 50px);
+    height: calc(100vh - 60px);
     display: flex;
     justify-content: center;
     align-items: center;
