--- a/client/src/components/modals/LoginModal/Login.css
+++ b/client/src/components/modals/LoginModal/Login.css
@@ -7,7 +7,7 @@
     /* grid-column: 1 / span 1;
     grid-row: 1 / span 2; */
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     background-color: rgba(0, 0, 0, 0.5);
     visibility: hidden;
     position: absolute;
@@ -22,9 +22,11 @@
   }
   
   .modal {
+    box-sizing: border-box;
     border-radius: 40px;
     border: 4px solid rgba(113, 0, 178, 0.6);
-    width: 400px;
+    width: 100%;
+    max-width: 400px;
     height: 400px;
     background-color: white;
     position: relative;
